--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -39,6 +39,9 @@
     <script src="bower_components/sweetalert2/dist/sweetalert2.all.min.js"></script>
     <script src="bower_components/photoset-grid/jquery.photoset-grid.min.js"></script>
     <script src="bower_components/jquery-colorbox/jquery.colorbox-min.js"></script>
+    <script src="socket.io/socket.io.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
+   
 
     <!-- My js-->
     <script src="js/mainConfig.js"></script>
@@ -47,7 +50,6 @@
     <script src="js/calculateNotifContact.js"></script>
     <script src="js/removeRequestContact.js"></script>
     <script src="js/findUsersContact.js"></script>
- >
 
     
     <%- include("contact/contactModal"); %>
