--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -278,7 +278,7 @@ label:focus,
 }
 
 .noti_contact_counter {
-  display: none;
+  display: block;
   position: absolute;
   background: #E1141E;
   color: #FFF;
@@ -293,7 +293,7 @@ label:focus,
 }
 
 .noti_counter {
-  display: none;
+  display: block;
   position: absolute;
   background: #E1141E;
   color: #FFF;
@@ -1281,4 +1281,10 @@ label:focus,
 .user-modal-password-alert-error,  
 .user-modal-password-alert-success {
   display:none;
+}
+.notif-readed-false {
+  background : #E3E8F0;
+}
+.display-none {
+  display:none
 }
