--- a/src/views/main/navbar/navbar.ejs
+++ b/src/views/main/navbar/navbar.ejs
@@ -33,18 +33,20 @@
                 <li>
                     <a href="#contactsModal" data-toggle="modal" title="Quản lý liên lạc" id="show-modal-contacts">
                         <i class="fa fa-user-plus"></i>
+                        in gudline
                         <div class="noti_contact_counter"></div>
                     </a>
                 </li>
                 <li>
                     <a href="#" id="noti_Button" data-toggle="modal" title="Thông báo">
                         <i class="fa fa-globe"></i>
-                        <div class="noti_counter" style="display: block;"></div>
                         <div id="noti_Container">
                             <div id="notifications">
-                                <h3>Thông báo</h3>
+                                <h3>Danh dau tat ca la da doc</h3>
                                 <div class="noti_content">
-                                    <!-- notification-->
+                                <!-- 
+                                    in gudline
+                                -->
                                 </div>
                                 <div class="seeAll"><a href="#">Xem tất cả</a></div>
                             </div>
@@ -54,7 +56,7 @@
                 <li class="dropdown" id="dropdown-navbar-user" data-uid="user._id">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <img class="avatar-small" src="images/users/<%= user.avatar %>" alt="">
-                        <span id= = "navbar-username"> <%user.username %></span>
+                        <span id= "navbar-username"> <%user.username %></span>
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
