--- a/src/views/main/navbar/navbar.ejs
+++ b/src/views/main/navbar/navbar.ejs
@@ -33,16 +33,16 @@
                 <li>
                     <a href="#contactsModal" data-toggle="modal" title="Quản lý liên lạc" id="show-modal-contacts">
                         <i class="fa fa-user-plus"></i>
-                        in gudline
+                        <!--in gudline-->
                         <div class="noti_contact_counter"></div>
                     </a>
                 </li>
                 <li>
-                    <a href="#" id="noti_Button" data-toggle="modal" title="Thông báo">
+                    <a href="javascript:void(0)" id="noti_Button" data-toggle="modal" title="Thông báo">
                         <i class="fa fa-globe"></i>
                         <div id="noti_Container">
                             <div id="notifications">
-                                <h3>Danh dau tat ca la da doc</h3>
+                                <a href="javascript:void(0)" id="popup-mark-notif-as-read" >Danh dau tat ca la da doc</a>
                                 <div class="noti_content">
                                 <!-- 
                                     in gudline
