fuel Prediction Add new

--- a/src/views/auth/alert/alert.ejs
+++ b/src/views/auth/alert/alert.ejs
@@ -8,7 +8,7 @@
 
 <% if(success != "") {%>
     <% success.forEach((item) => { %>
-        <script> openRLoginModal();</script>
+        <script> openRegisterModal();</script>
         <div class="alert alert-success"><%- item %></div>
    <% }) %>
 <% } %>
